test/expected/regression-net-connect.txt
/scripts/regression-net-connect.js:12
  throw error;
  ^

Error: connect ECONNREFUSED 127.0.0.1:24075
    at Object.exports._errnoException (util.js:1007:11)
    at exports._exceptionWithHostPort (util.js:1030:20)
    at TCPConnectWrap.afterConnect [as oncomplete] (net.js:1081:14)
    at fireErrorCallbacks (net.js:464:15)
    at Socket._destroy (net.js:503:3)
    at TCPConnectWrap.afterConnect [as oncomplete] (net.js:1090:10)
    at connect (net.js:855:26)
    at net.js:1004:7
    at GetAddrInfoReqWrap.asyncCallback [as callback] (dns.js:65:16)
    at GetAddrInfoReqWrap.onlookup [as oncomplete] (dns.js:84:10)
    at lookup (dns.js:167:19)
    at lookupAndConnect (net.js:985:3)
    at Socket.connect (net.js:930:5)
    at Object.exports.connect.exports.createConnection (net.js:70:35)
    at Object.<anonymous> (/scripts/regression-net-connect.js:10:20)
    at Module._compile (module.js:541:32)
    at Object.Module._extensions..js (module.js:550:10)
    at Module.load (module.js:458:32)
    at tryModuleLoad (module.js:417:12)
    at Function.Module._load (module.js:409:3)
    at Module.runMain (module.js:575:10)
    at run (bootstrap_node.js:340:7)
    at startup (bootstrap_node.js:132:9)
    at bootstrap_node.js:455:3
